--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-hystrix</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
